# entropick

./: CLAUDE.md  README.md  pyproject.toml
src/qr_sampler/: config.py
src/qr_sampler/injection/: correlated_walk.py  logit_noise.py  selection_drift.py  temp_variance.py
src/qr_sampler/pipeline/: context.py
src/qr_sampler/stages/: __init__.py  entropy_fetch.py  gumbel_selection.py  mirostat.py  selection_drift.py
tests/: test_contracts.py
tests/test_injection/: test_selection_drift.py
tests/test_pipeline/: test_stages.py
