[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-sampler"
dynamic = ["version"]
description = "Plug any randomness source into LLM token sampling via vLLM"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "qr-sampler contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "grpcio>=1.60.0",
    "protobuf>=4.21.0",
]

[project.urls]
Homepage = "https://github.com/ereid7/Quantum-random-vLLM-sampler"
Repository = "https://github.com/ereid7/Quantum-random-vLLM-sampler"
Issues = "https://github.com/ereid7/Quantum-random-vLLM-sampler/issues"
Changelog = "https://github.com/ereid7/Quantum-random-vLLM-sampler/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openentropy = [
    "openentropy>=0.10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.10.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0",
    "bandit>=1.7.0",
]

[project.entry-points."vllm.logits_processors"]
qr_sampler = "qr_sampler.processor:QRSamplerLogitsProcessor"

[project.entry-points."qr_sampler.entropy_sources"]
system = "qr_sampler.entropy.system:SystemEntropySource"
quantum_grpc = "qr_sampler.entropy.quantum:QuantumGrpcSource"
timing_noise = "qr_sampler.entropy.timing:TimingNoiseSource"
mock_uniform = "qr_sampler.entropy.mock:MockUniformSource"
sham_qrng = "qr_sampler.entropy.sham:ShamQrngSource"
openentropy = "qr_sampler.entropy.openentropy:OpenEntropySource"

[project.entry-points."qr_sampler.pipeline_stages"]
adaptive_injection = "qr_sampler.stages.adaptive_injection:AdaptiveInjectionStage"
logit_perturbation = "qr_sampler.stages.logit_perturbation:LogitPerturbationStage"
dry = "qr_sampler.stages.dry:DRYPenaltyStage"
top_n_sigma = "qr_sampler.stages.top_n_sigma:TopNSigmaStage"
temperature = "qr_sampler.stages.temperature:TemperatureStage"
temp_modulation = "qr_sampler.stages.temp_modulation:TemperatureModulationStage"
min_p = "qr_sampler.stages.min_p:MinPStage"
xtc = "qr_sampler.stages.xtc:XTCStage"
entropy_fetch = "qr_sampler.stages.entropy_fetch:EntropyFetchStage"
selection_drift = "qr_sampler.stages.selection_drift:SelectionDriftStage"
mirostat = "qr_sampler.stages.mirostat:MirostatStage"
gumbel_selection = "qr_sampler.stages.gumbel_selection:GumbelSelectionStage"
selection = "qr_sampler.stages.selection:SelectionStage"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0.dev0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pyflakes + pycodestyle
    "I",                  # isort
    "N",                  # pep8-naming
    "UP",                 # pyupgrade
    "B",                  # flake8-bugbear
    "SIM",                # flake8-simplify
    "TCH",                # flake8-type-checking
    "RUF",                # ruff-specific rules
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["qr_sampler"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openentropy.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/qr_sampler"]
omit = [
    "src/qr_sampler/proto/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
